runtime-macros/tests/cases/fail_unknown_attr.stderr
error: #[topo_pipeline] takes no arguments today (got `stage = "ingest"`)
 --> tests/cases/fail_unknown_attr.rs:7:17
  |
7 | #[topo_pipeline(stage = "ingest")]
  |                 ^^^^^

error[E0425]: cannot find function `would_be_pipelined` in this scope
  --> tests/cases/fail_unknown_attr.rs:11:5
   |
11 |     would_be_pipelined();
   |     ^^^^^^^^^^^^^^^^^^ not found in this scope
